--- a/src/app/nav1/nav1.component.html
+++ b/src/app/nav1/nav1.component.html
@@ -11,11 +11,11 @@
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li class="active"><a [routerLink]="['/']" routerLinkActive="router-link-active" ><h5>Acceuil</h5></a></li>
-                <li><a  [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active" ><h5>Espace Client</h5></a></li>
                 <li><a [routerLink]="['/contacter']" routerLinkActive="router-link-active" ><h5>Contact</h5></a></li>
                
               </ul>
               <ul class="nav navbar-nav navbar-right">
+                  <li><a  [routerLink]="['/EspaceClient']" routerLinkActive="router-link-active" ><h5>S'inscrire</h5></a></li>
                 <li><a [routerLink]="['/login']" routerLinkActive="router-link-active" ><h5><span class="glyphicon glyphicon-log-in"></span> Connexion</h5></a></li>
               </ul>
             </div>
