--- a/src/app/client/liste-employes/liste-employes.component.scss
+++ b/src/app/client/liste-employes/liste-employes.component.scss
@@ -117,3 +117,17 @@
 /*    ---------------------FIN--------------------------
 :: CSS Pour le Div Permettant de Lister les Employes
 -------------------------------------------------- */
+
+.direction
+{
+   float: right;
+   margin-top: 10%;
+   border: none;
+   border-radius: 1.5rem;
+   padding: 2%;
+   background: #0062cc;
+   color: #ffff;
+   font-weight: 600;
+   width: 70%;
+   cursor: pointer;
+}
