--- a/src/app/client/nouvelle-demande/nouvelle-demande.component.html
+++ b/src/app/client/nouvelle-demande/nouvelle-demande.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="demandeForm" (ngSubmit)="validerDemande()">
+<form [formGroup]="demandeForm">
 <!--Formulaire Pour Donner le Salaire Propose et les Services
 	 ++++++++++++++++DEBUT++++++++++++++++++++++++++++++-->
 		<div class="row" style="background-color:rgb(211, 209, 210);">
