--- a/src/app/Adm/ref-competence/ref-competence.component.html
+++ b/src/app/Adm/ref-competence/ref-competence.component.html
@@ -8,6 +8,8 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-success" ><i class="glyphicon glyphicon-plus-sign"></i></button>
+                <button (click)="visibiliteLister()" class="btn btn-primary" ><i class="glyphicon glyphicon-list"></i></button>
+
             </div>
 
         </form>
@@ -17,22 +19,36 @@
     </div>
 </div>
 
-<!-- <div class="col-md-6">
 
-<div class="panel panel-primary">
+ <div class="col-md-6">
+<div class="panel panel-primary" *ngIf="listerCompetence">
     <div class="panel-heading"><span class="glyphicon glyphicon-list"> Mes Competences</span></div>
   <table class="table table-striped">
     <thead class="thead-dark">
     <th>Description</th>
-    <th>Action</th>
+    <th>Supprimmer</th>
+    <th>editer</th>
+
   </thead>
   <tbody >
     <tr *ngFor="let comp of listeCompences " class="table-info">
-      <td>{{comp.Description}}</td>
+      <td>{{comp.description}}</td>
+      <td><button (click)="deleteCompetence(comp)" class="btn btn-danger" ><i class="glyphicon glyphicon-trash"></i></button>
+        <td><button (click)="deleteCompetence(comp)" class="btn btn-primary" ><i class="glyphicon glyphicon-pencil"></i></button>
+        
+      </td>
     </tr>
   </tbody>
   </table>
+  <div class="container">
+        <ul class="pagination">
+          <li *ngIf="vprecedant" (click)="precedant()"><a class="glyphicon glyphicon-menu-left"></a></li>
+          <li *ngIf="vsuivant" (click)="suivant()"><a class="glyphicon glyphicon-menu-right"></a></li>
+
+     
+        </ul>
+      </div>
   </div>
   
   <div>
-</div> -->
+</div>
