--- a/src/app/section2/section2.component.html
+++ b/src/app/section2/section2.component.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
                 <div class="card">
-                    <img class="card-img-top" src="../assets/SET/G1.jpg">
+                    <img class="card-img-top" src="../assets/SET/M1.jpg">
                     <div class="card-block">
 
                         <h4 class="card-title text-center">GARDE ENFANTS</h4>
